[package]
name = "bevy_ggrs_avian_example"
version = "0.1.0"
edition = "2021"
license = "MIT"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code
[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
# Use release profile as default values
inherits = "release"

# Optimize with size in mind, also try "s", sometimes it is better.
# This doesn't increase compilation times compared to -O3, great improvements
opt-level = "z"

# Do a second optimization pass removing duplicate or unused code from dependencies.
# Slows compile times, marginal improvements
lto = "fat"

# When building crates, optimize larger chunks at a time
# Slows compile times, marginal improvements
codegen-units = 1

[features]
default = []
web = ["bevy_ggrs/wasm-bindgen"]

[dependencies]
# Prefer listing the exact bevy and bevy-adjacent versions here for clarity of what worked

# The main branch has bug fixes for determinism we require https://github.com/Jondolf/avian/pull/480
# avian2d = { version = "0.1.2", default-features = false, features = [
# avian2d = { path = "../avian/crates/avian2d", default-features = false, features = [
avian2d = { git = "https://github.com/Jondolf/avian", branch = "main", default-features = false, features = [
    "2d",
    "f32",
    "parry-f32",
    "debug-plugin",
    "enhanced-determinism", # Also enables libm in glam dependency for https://github.com/cscorley/bevy_ggrs_rapier_example/issues/22
] }

bevy = "0.14.2"
# Disable the egui extension features so everything works in WASM easily
bevy-inspector-egui = { version = "0.25.2", default-features = false, features = [
    "bevy_render",
] }
bevy_framepace = "0.17.1"
bevy_ggrs = "0.16.0"
bevy_matchbox = { version = "0.10.0", features = ["ggrs"] }
bytemuck = { version = "1.18.0", features = ["derive"] }
log = "0.4.22"
rand = "0.8.5"
tracing-subscriber = { version = "0.3.18", features = [
    "registry",
    "env-filter",
] }
tracing-log = "0.2.0"

# Add our web-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
